test/integration/bad/removed_features/unsized-old-array.stan
functions{
  real foo(  real[,] v){
    return sum(v);
  }
}
